--- a/.github/workflows/ghcr_deploy.yml
+++ b/.github/workflows/ghcr_deploy.yml
@@ -7,8 +7,8 @@ on:
         required: true
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: docker.io
+  IMAGE_PREFIX: codming/litellm
 
 jobs:
   build-and-push-image:
@@ -16,6 +16,18 @@ jobs:
     permissions:
       contents: read
       packages: write
+    strategy:
+      matrix:
+        include:
+          - platform: linux/amd64
+            base_image: cgr.dev/chainguard/python:latest-dev
+            arch_suffix: amd64
+          - platform: linux/arm64
+            base_image: cgr.dev/chainguard/python:latest-dev
+            arch_suffix: arm64
+          - platform: linux/s390x
+            base_image: python:3.13.1-slim
+            arch_suffix: linuxone
     steps:
       - name: Set up environment
         run: |
@@ -85,33 +97,36 @@ jobs:
           echo "Files in upstream directory:"
           ls -la
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_PREFIX }}-${{ matrix.arch_suffix }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@e0e4588fad221d38ee467c0bffd91115366dc0c5
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@edfb0fe6204400c56fbfd3feba3fe9ad1adfa345
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@4976231911ebf5f32aad765192d35f942aa48cb8
+        uses: docker/build-push-action@v5
         with:
           context: ./upstream
           push: true
           tags: |
-            ${{ steps.meta.outputs.tags }}-${{ github.event.inputs.tag }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.tag }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_PREFIX }}-${{ matrix.arch_suffix }}:${{ github.event.inputs.tag }}
+            ${{ env.IMAGE_PREFIX }}-${{ matrix.arch_suffix }}:latest
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform }}
+          build-args: |
+            LITELLM_BUILD_IMAGE=${{ matrix.base_image }}
+            LITELLM_RUNTIME_IMAGE=${{ matrix.base_image }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
