--- a/.github/workflows/ghcr_deploy.yml
+++ b/.github/workflows/ghcr_deploy.yml
@@ -26,7 +26,7 @@ jobs:
             base_image: cgr.dev/chainguard/python:latest-dev
             arch_suffix: arm64
           - platform: linux/s390x
-            base_image: python:3.13.1-slim
+            base_image: python:3.13.7-alpine
             arch_suffix: linuxone
     steps:
       - name: Set up environment
