Support multiple platforms
Signed-off-by: Swilder-M <i@codming.com>

--- a/.github/workflows/ghcr_deploy.yml
+++ b/.github/workflows/ghcr_deploy.yml
@@ -119,7 +119,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./upstream
-          file: ${{ matrix.dockerfile }}
+          file: ./upstream/${{ matrix.dockerfile }}
           push: true
           tags: |
             ${{ env.IMAGE_PREFIX }}-${{ matrix.arch_suffix }}:${{ github.event.inputs.tag }}
