Support multiple platforms
Signed-off-by: Swilder-M <i@codming.com>

--- a/v1.76.1.rc.1/Dockerfile-linuxone
+++ b/v1.76.1.rc.1/Dockerfile-linuxone
@@ -11,8 +11,12 @@ WORKDIR /app
 
 # Install build dependencies
 RUN apt-get clean && apt-get update && \
-    apt-get install -y gcc python3-dev libssl-dev openssl && \
+    apt-get install -y gcc python3-dev libssl-dev openssl curl && \
     rm -rf /var/lib/apt/lists/*
+
+# Install Rust for tiktoken compilation
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 
 RUN pip install --upgrade pip && \
